Fri Mar 24 23:49:22 1995  Theodore Y. Ts'o  <tytso@dcl>

	* sclient.c (main): Initialize auth_context to NULL before calling
	        sendauth().

Fri Mar 10 11:09:34 1995  Chris Provenzano (proven@mit.edu)

        * sclient.c Use new calling convention for krb5_sendauth().

Thu Mar  2 12:27:22 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (ISODELIB): Remove reference to $(ISODELIB).

Wed Mar  1 11:56:51 1995  Theodore Y. Ts'o  <tytso@dcl>

	* configure.in: Remove ISODE_INCLUDE, replace check for -lsocket
		and -lnsl with WITH_NETLIB check.

Tue Feb 28 01:58:39 1995  John Gilmore  (gnu at toad.com)

	* sclient.c:  Avoid <krb5/...> and <com_err.h> includes.

Tue Feb 14 15:30:55 1995 Chris Provenzano  (proven@mit.edu)

        * kadmin.c Call krb5_sendauth() with new calling convention.

Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

    * Added krb5_context to all krb5_routines

Mon Oct  3 19:16:02 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Use $(srcdir) to find manual page for make install.

Wed Sep 28 23:09:00 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Relink executable when library chages.

